# aocl

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  NOTICES.txt  README.md  aocl_blis_build.cmake  aocl_compression_build.cmake  aocl_crypto_build.cmake  aocl_libflame_build.cmake  aocl_libm_build.cmake  aocl_sparse_build.cmake  aocl_utils_build.cmake  setup.sh
.github/: palamida.yml
presets/: base.json  linux-make.json  linux-ninja.json  win-msvc.json  win-ninja.json
